Jupyterlab install and test

--- a/koenig/hw1/notebooks/test1.ipynb
+++ b/koenig/hw1/notebooks/test1.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -69,10 +69,41 @@
      "text": [
       "5\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "32.0"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "32.0"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1024 / 32"
    ],
    "metadata": {
     "collapsed": false,
