Finalized evaluation and created submission script

--- a/schmidt/hw3/testing_hw3.ipynb
+++ b/schmidt/hw3/testing_hw3.ipynb
@@ -200,15 +200,16 @@
     "\n",
     "1. Let `x` be an integer, then its square is given by `x^2`\n",
     "2. The distance to the adjacent squared integers is given by `x^2 - (x-1)^2 = 2x - 1` and `(x+1)^2 - x^2 = 2x + 1` respectively \n",
-    "3. Now let `n = x^2`. Then, the distances to the next perfect square from `n` relative to the value of `n` become `2/sqrt(n) - 1/z` and `2/sqrt(n) + 1/z`\n",
-    "4. As the value for `n` increases, the relative distance to the next perfect square decreases.\n",
+    "3. Now let `n = x^2`. Then, the distances to the next perfect square from `n` become `2*sqrt(n) - 1` and `2*sqrt(n) + 1`\n",
+    "4. This means, relative to `n`, we get `2/sqrt(n) - 1/n` and `2/sqrt(n) + 1/n` \n",
+    "5. Hence, as the value for `n` increases, the relative distance to the next perfect square decreases.\n",
     "\n",
     "**This allows us to find the size of the arrays in which to look for adjacent perfect squares:**\n",
     "\n",
     "1. As the relative distances decrease, a fixed percentage that works for `n` will also work for all integers larger than `n`\n",
     "2. As the absolute distances increase, a fixed absolute value that works for `n` will also work for all integers smaller than `n`.\n",
     "\n",
-    "Below, I will start with `n=2500`, for which the relative distance is `4.1%` and the absolute distance is `101`. "
+    "Below, I will start with `n=2500`, for which the relative distance is `<4.1%` and the absolute distance is `<=101`. "
    ]
   },
   {
